# learn

competitive-programming/algorithm-design-topics/: modular-arithmetic.md  monotonic-stack.md  sliding-window.md  two-pointers-method.md
competitive-programming/programming-techniques/: floating-numbers.md  modular-arithmetic.md
competitive-programming/range-queries/: minimum-query.md  sum-query.md
management/requirements/: customer-requirements.md  essentials.md  user-requirements.md  vision-and-scope.md
management/scrum/: index.md
university/computational-math/: differential.py  integral.py  interpolation.py  logarithm.py  mathmodel.py  matrix.py  nonlineareq.py  partdifferenrial.py  potemtial_flow.py  smo.py  smo1.py  СМО1.xlsx
university/system-software/course-work/: CMakeLists.txt  Hello.g4  macro.c  macro_base.txt  macro_base_test.txt  macro_nested.txt  macro_nested_test.txt  macro_recursive.txt  macro_recursive_test.txt  pseudocode.py
university/system-software/course-work/.antlr/: HelloLexer.java
university/system-software/course-work/deftab/: CMakeLists.txt  deftab.c  deftab.h  deftab_test.c
university/system-software/course-work/namtab/: CMakeLists.txt  namtab.c  namtab.h  namtab_test.c
university/system-software/course-work/old/: exampleout.txt  in copy.txt  in.txt  innested.txt  macro  macro.c  out.txt  tasks.json  vec.h
university/system-software/course-work/parser/: CMakeLists.txt  parser.c  parser.h  parser_test.c
university/system-software/course-work/strutils/: CMakeLists.txt  strutils.c  strutils.h  strutils_test.c
web/: html.md
(+5123 files in other folders)
